<resources>
    <string name="app_name">CMSC_355_G18_CSBuddy</string>

    <string name="oneButton">1</string>
    <string name="twoButton">2</string>
    <string name="threeButton">3</string>
    <string name="fourButton">4</string>
    <string name="fiveButton">5</string>
    <string name="sixButton">6</string>
    <string name="sevenButton">7</string>
    <string name="eightButton">8</string>
    <string name="nineButton">9</string>
    <string name="zeroButton">0</string>
    <string name="plusButton">+</string>
    <string name="minusButton">-</string>
    <string name="multiplyButton">*</string>
    <string name="divideButton">/</string>
    <string name="equalsButton">=</string>
    <string name="clearButton">CLEAR</string>
    <string name="inputText">0</string>
    <string name="answerText">Answer Box</string>
    <string name="aButton">A</string>
    <string name="bButton">B</string>
    <string name="cButton">C</string>
    <string name="dButton">D</string>
    <string name="eButton">E</string>
    <string name="fButton">F</string>
    <string name="decimalButton">.</string>
    <string name="negateButton">( - )</string>
    <string name="enterButton">ENTER</string>
    <string name="deleteButton">DEL</string>
    <string name="inputRow">INPUT MATRIX ROW SIZE</string>
    <string name="inputValidRow">INPUT VALID ROW SIZE</string>
    <string name="inputValidCol">INPUT VALID COLUMN SIZE</string>
    <string name="inputCol">INPUT MATRIX COLUMN SIZE</string>
    <string name="inputValues">INPUT VALUES</string>
    <string name="inputOp">INPUT OPERATION</string>
    <string name="squareMatrix">MUST BE SQUARE MATRIX</string>
    <string name="detMatrix">DETERMINANT OF MATRIX</string>
    <string name="answerMatrix">ANSWER MATRIX</string>
    <string name="inputMatrixSize">_</string>
    <string name="MatrixCreated">MATRIX</string>
    <string name="MatrixTab">MATRIX</string>
    <string name="Determinant">DET</string>
    <string name="addOne">%1$s1</string>
    <string name="addTwo">%1$s2</string>
    <string name="addThree">%1$s3</string>
    <string name="addFour">%1$s4</string>
    <string name="addFive">%1$s5</string>
    <string name="addSix">%1$s6</string>
    <string name="addSeven">%1$s7</string>
    <string name="addEight">%1$s8</string>
    <string name="addNine">%1$s9</string>
    <string name="addZero">%1$s0</string>
    <string name="addDecimal">%1$s.</string>


    <string name="repTextView">Repetition</string>
    <string name="combRadioButton">Combination</string>
    <string name="permRadioButton">Permutation</string>
    <string name="choose">choose</string>
    <string name="n">N</string>
    <string name="r">R</string>
    <string name="submitButton">Submit</string>

    <string name="matrixTab">Matrix</string>
    <string name="permCombTab">Perm/Comb</string>
    <string name="truthTab">Truth</string>
    <string name="javaTab">Java</string>
    <string name="calcTab">Calc</string>
    <string name="answer">Answer:</string>

    <string-array name="bases">
        <item>Dec</item>
        <item>Bin</item>
        <item>Hex</item>
    </string-array>

    <string-array name="dataTypes">
        <item>int</item>
        <item>float</item>
        <item>double</item>
        <item>long</item>
        <item>short</item>
    </string-array>


    <string name="ttInputText">input expression here</string>
    <string name="defaultTTOutput"><center>  \n
                            ---------\n
                             \n
                            ---------\n
                             \n
                            ---------\n
                             \n
                            ---------\n
                             \n
    </center></string>

    <string name="defaultTT"><center> p | q \n
                            ---------\n
                            F | F \n
                            ---------\n
                            F | T \n
                            ---------\n
                            T | F \n
                            ---------\n
                            T | T \n
    </center></string>
    <string name="p">p</string>
    <string name="q">q</string>
    <string name="and">∧</string>
    <string name="ttSubmitButton">SUBMIT</string>

</resources>
