<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/repetitionButton"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginTop="187dp"
        android:layout_marginBottom="109dp"
        android:baselineAligned="false"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="103dp"
        android:layout_height="38dp"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="117dp"
        android:text="@string/repTextView"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/combRadioButton" />

    <RadioButton
        android:id="@+id/permRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="289dp"
        android:text="@string/permRadioButton"
        app:layout_constraintBottom_toTopOf="@+id/chooseTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <RadioButton
        android:id="@+id/combRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/combRadioButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <TextView
        android:id="@+id/chooseTextView"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="209dp"
        android:text="@string/choose"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText4"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permRadioButton" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="92dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/n"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/chooseTextView"
        app:layout_constraintEnd_toStartOf="@+id/chooseTextView"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="98dp"
        android:layout_height="0dp"
        android:layout_marginBottom="209dp"
        android:ems="10"
        android:hint="@string/r"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repetitionButton" />

</androidx.constraintlayout.widget.ConstraintLayout>