<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TruthTables">

        <TextView
            android:id="@+id/ttOutputText"
            android:layout_width="121dp"
            android:layout_height="279dp"
            android:background="#ADBD96"
            android:includeFontPadding="true"
            android:text="@string/defaultTTOutput"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="@+id/leftparenButton"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/ttOutputText2"
            android:layout_width="113dp"
            android:layout_height="281dp"
            android:background="#ADBD96"
            android:includeFontPadding="true"
            android:text="@string/defaultTT"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/pButton"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <Button
            android:id="@+id/deleteButtonForTT"
            android:layout_width="75dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="118dp"
            android:layout_marginEnd="120dp"
            android:background="#2196F3"
            android:text="DELETE"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iffButton"
            app:layout_constraintTop_toBottomOf="@+id/leftparenButton" />

        <Button
            android:id="@+id/xorButton"
            android:layout_width="75dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="#FF9800"
            android:text="⊕"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/iffButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notButton" />

        <Button
            android:id="@+id/orButton"
            android:layout_width="75dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="215dp"
            android:background="#FF9800"
            android:text="∨"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/ifButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/andButton"
            app:layout_constraintTop_toBottomOf="@+id/qButton" />

        <Button
            android:id="@+id/andButton"
            android:layout_width="75dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="#FF9800"
            android:text="∧"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            app:layout_constraintEnd_toStartOf="@+id/orButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pButton" />

        <Button
            android:id="@+id/pButton"
            android:layout_width="75dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="430dp"
            android:background="#000000"
            android:text="@string/p"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/andButton"
            app:layout_constraintEnd_toStartOf="@+id/qButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/qButton"
            android:layout_width="75dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="430dp"
            android:background="#000000"
            android:text="@string/q"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/orButton"
            app:layout_constraintEnd_toStartOf="@+id/leftparenButton"
            app:layout_constraintStart_toEndOf="@+id/pButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/notButton"
            android:layout_width="75dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="#FF9800"
            android:text="¬"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/xorButton"
            app:layout_constraintEnd_toStartOf="@+id/ifButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/andButton" />

        <Button
            android:id="@+id/leftparenButton"
            android:layout_width="75dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="430dp"
            android:background="#000000"
            android:text="("
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/rightparenButton"
            app:layout_constraintStart_toEndOf="@+id/qButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/rightparenButton"
            android:layout_width="75dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="430dp"
            android:layout_marginEnd="20dp"
            android:background="#000000"
            android:text=")"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/leftparenButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clearButtonForTT"
            android:layout_width="75dp"
            android:layout_height="49dp"
            android:background="#2196F3"
            android:text="CLEAR"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/submitButtonForTT"
            app:layout_constraintEnd_toEndOf="@id/guideline6"
            app:layout_constraintHorizontal_bias="0.129"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/ttInputText"
            app:layout_constraintVertical_bias="0.36" />

        <TextView
            android:id="@+id/ttInputText"
            android:layout_width="288dp"
            android:layout_height="51dp"
            android:background="#ADBD96"
            android:text=" "
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.108" />

        <Button
            android:id="@+id/submitButtonForTT"
            android:layout_width="75dp"
            android:layout_height="49dp"
            android:layout_marginTop="10dp"
            android:background="#2196F3"
            android:text="SUBMIT"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clearButtonForTT" />

        <Button
            android:id="@+id/ifButton"
            android:layout_width="75dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="215dp"
            android:background="#FF9800"
            android:text="→"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/iffButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/notButton"
            app:layout_constraintTop_toBottomOf="@+id/orButton" />

        <Button
            android:id="@+id/iffButton"
            android:layout_width="75dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="#FF9800"
            android:text="↔"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/deleteButtonForTT"
            app:layout_constraintStart_toEndOf="@+id/xorButton"
            app:layout_constraintTop_toBottomOf="@+id/ifButton" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="144dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="196dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="418dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="137dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="106dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="423dp" />

</androidx.constraintlayout.widget.ConstraintLayout>